# nlp_study

./: .gitignore  .python-version  ch04_01.ipynb  ch05_01.ipynb  ch06_01.ipynb  ch06_02.ipynb  ch06_03.ipynb  ch07_01.ipynb  ch07_02.ipynb  ch08_01.ipynb  pyproject.toml
data/: di_u.conf  event-course-name-freq.csv
data/klue/: submit_0.7704691812327507.csv
word2vec/: cosine_similarity.ipynb  cosine_similarity.py  repia_search_engine.py
