[tool.poetry]
name = "nlp-study"
version = "0.1.0"
description = ""
authors = ["jurepi, <danhee.an@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
koreanize-matplotlib = "^0.1.1"
scikit-learn = "^1.5.0"
konlpy = "^0.6.0"
tqdm = "^4.66.4"
plotnine = "^0.13.6"
pydrive = "^1.3.1"
soynlp = "^0.0.493"
wordcloud = "^1.9.3"
lightgbm = "^4.3.0"
chardet = "^5.2.0"
yellowbrick = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
